# kafka_eventcraft

./: .gitignore  readme.md
docker/: kafka.py
docs/: how_to_poetry.md  todo.md
event_craft/: produce_to_kafka.py
kafka_stream/: kafka_consumer.py  produce_to_kafka.py
s3d_producer/: main.py  pyproject.toml
s3d_producer/data_engineer_homework/: events.py  poisson.py  tracking_ids.py
s3d_producer/project/: main.py
s3d_producer/project/data_engineer_homework/: country_codes.csv  tracking_ids.json
sample_producer/: Dockerfile  websocket_client.py  websocket_producer.py
utils/: create_topic.py
websocket_producer/: Dockerfile  websocket_client.py  websocket_producer.py
