[tool.poetry]
name = "data-engineer-homework"
version = "0.1.0"
description = ""
authors = ["Balint Haller <balint.haller@shapr3d.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^21.4b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
